--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     </div>
 
-    <script src="//www.jq22.com/jquery/jquery-2.1.1.js"></script>
+    <script src="https://www.jq22.com/jquery/jquery-2.1.1.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/join_room.js"></script>
