--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     </div>
 
-    <script src="https://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
+    <!--<script src="https://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>-->
     <script src="./js/index.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/join_room.js"></script>
