--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
     </div>
 
-    <script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/join_room.js"></script>
